public static class Settings
{
    public static string Animation = "State";
    public static string AnimationRun = "Run";
    public static string AnimationFire = "Fire";
    public static string AnimationReload = "Reload";
    public static string AnimationAttack_Bl = "Attack";
    public static string AnimationCheckAttack_Bl = "isAttack";
    public static string Tag_Border = "Border";
    public static string Tag_Zombie = "Zombie";
    public static string Tag_Player = "Player";
    public static string Tag_CheckZombie = "CheckZombie";
    public static string Tag_Bullet = "Bullet";
    public static string Tag_Die = "Die";
    public static string Tag_Ground = "Ground";
    public static string LayerDie = "Die";
    public static float RadiusAttackPlayer = .75f;

    public static string Save_Weapon = "Id Weapon";
    public static string Save_Sound = "Sound";
    public static string Save_Vibrate = "Vibrate";
}